syntax = "proto3";

package flashcard;

option go_package = "flashcard-backend/proto/flashcard";

import "google/protobuf/timestamp.proto";

// 用户服务
service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

// 卡片组服务
service DeckService {
  rpc CreateDeck(CreateDeckRequest) returns (CreateDeckResponse);
  rpc GetDeck(GetDeckRequest) returns (GetDeckResponse);
  rpc GetUserDecks(GetUserDecksRequest) returns (GetUserDecksResponse);
  rpc UpdateDeck(UpdateDeckRequest) returns (UpdateDeckResponse);
  rpc DeleteDeck(DeleteDeckRequest) returns (DeleteDeckResponse);
}

// 闪卡服务
service FlashcardService {
  rpc CreateFlashcard(CreateFlashcardRequest) returns (CreateFlashcardResponse);
  rpc GetFlashcard(GetFlashcardRequest) returns (GetFlashcardResponse);
  rpc GetDeckFlashcards(GetDeckFlashcardsRequest) returns (GetDeckFlashcardsResponse);
  rpc UpdateFlashcard(UpdateFlashcardRequest) returns (UpdateFlashcardResponse);
  rpc DeleteFlashcard(DeleteFlashcardRequest) returns (DeleteFlashcardResponse);
}

// 用户相关消息
message User {
  uint32 id = 1;
  string email = 2;
  string username = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message CreateUserRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  uint32 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  uint32 id = 1;
  string email = 2;
  string username = 3;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  uint32 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

// 卡片组相关消息
message Deck {
  uint32 id = 1;
  string title = 2;
  string description = 3;
  uint32 user_id = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateDeckRequest {
  string title = 1;
  string description = 2;
  uint32 user_id = 3;
}

message CreateDeckResponse {
  Deck deck = 1;
}

message GetDeckRequest {
  uint32 id = 1;
}

message GetDeckResponse {
  Deck deck = 1;
}

message GetUserDecksRequest {
  uint32 user_id = 1;
}

message GetUserDecksResponse {
  repeated Deck decks = 1;
}

message UpdateDeckRequest {
  uint32 id = 1;
  string title = 2;
  string description = 3;
}

message UpdateDeckResponse {
  Deck deck = 1;
}

message DeleteDeckRequest {
  uint32 id = 1;
}

message DeleteDeckResponse {
  bool success = 1;
}

// 闪卡相关消息
message Flashcard {
  uint32 id = 1;
  string front = 2;
  string back = 3;
  uint32 deck_id = 4;
  int32 difficulty = 5;
  google.protobuf.Timestamp last_review = 6;
  google.protobuf.Timestamp next_review = 7;
  int32 review_count = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message CreateFlashcardRequest {
  string front = 1;
  string back = 2;
  uint32 deck_id = 3;
}

message CreateFlashcardResponse {
  Flashcard flashcard = 1;
}

message GetFlashcardRequest {
  uint32 id = 1;
}

message GetFlashcardResponse {
  Flashcard flashcard = 1;
}

message GetDeckFlashcardsRequest {
  uint32 deck_id = 1;
}

message GetDeckFlashcardsResponse {
  repeated Flashcard flashcards = 1;
}

message UpdateFlashcardRequest {
  uint32 id = 1;
  string front = 2;
  string back = 3;
  int32 difficulty = 4;
}

message UpdateFlashcardResponse {
  Flashcard flashcard = 1;
}

message DeleteFlashcardRequest {
  uint32 id = 1;
}

message DeleteFlashcardResponse {
  bool success = 1;
}